# jaffle-sandbox

./: .gitignore  README.md  catalogs.yml  dbt_project.yml  profiles.yml  pyproject.toml
models/: __sources.yml  customers.sql  dumdum.sql  ghost_in_the_ref.sql  looper.sql  schema.yml  source.yml  test_source_model.sql
models/staging/: source_table.sql.hide  source_view.sql.hide  stg_temp_table.sql  temp_view.sql
models/staging/disabled_dir/: __source_disabled.yml  ref_disabled_source.sql
models/staging/enabled_dir/: __source_enabled.yml  ref_enabled_source.sql
seeds/: fake_data_ltz.csv  fake_data_ntz.csv  fake_data_utc.csv  random_skus.csv
snapshots/: fake_data_ltz_snapshot.sql  fake_data_ltz_snapshot.yml  fake_data_ltz_snapshot_core.sql  fake_data_ntz_snapshot.sql  fake_data_ntz_snapshot_core.sql  fake_data_utc_snapshot_core.sql
