[project]
name = "jaffle-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt>=1.0.0.40.5",
    "dbt-bigquery>=1.9.2",
    "dbt-core==1.10.15",
    "dbt-databricks==1.10.15",
    "dbt-snowflake>=1.9.4",
    "marimo[recommended]>=0.17.2",
    "pip>=25.1.1",
    "pyarrow~=18.1",
    "sqlglot>=27.29.0",
]
